--- a/src/app/components/shared/movie-card/movie-card.component.html
+++ b/src/app/components/shared/movie-card/movie-card.component.html
@@ -6,8 +6,8 @@
       class="card__img"
     />
     <span class="card__footer">
-      <span>{{ movie?.title }}</span>
-      <span>{{ movie?.overview }}</span>
+      <span>{{ movie.title }}</span>
+      <span>{{ movie.overview }}</span>
     </span>
     <span class="card__action">
       <svg viewBox="0 0 448 512" title="play">
