--- a/src/app/components/shared/search-bar/search-bar.component.html
+++ b/src/app/components/shared/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
 <div class="search-bar">
-  <input type="text" placeholder="Search..." [(ngModel)]="searchKeyword"/>
+  <input type="text" placeholder="Search..." [(ngModel)]="searchKeyword" (keyup.enter)="search()"/>
   <button type="button" (click)="search()">Search</button>
 </div>
