--- a/src/app/components/shared/movie-list/movie-list.component.html
+++ b/src/app/components/shared/movie-list/movie-list.component.html
@@ -3,10 +3,18 @@
 
 <div class="pagination-container">
   <span *ngIf="movieData"> {{ pageNumber }} / {{ movieData.total_pages }}</span>
-  <button (click)="getNextPage()">Next</button>
-  <button (click)="getPreviusPage()">Previous</button>
+  <button (click)="getNextPage()">Next</button> <!-- disable the button if we are on the last page  -->
+  <button (click)="getPreviusPage()">Previous</button><!-- disable the button if we are on the first page  -->
   <app-loading *ngIf="isLoading"></app-loading>
 </div>
+
+<!-- you can combine the two condition with on div
+  <div *ngIf="!isLoading && movieData" class="film-list">
+    <div *ngFor="let movie of movieData.results"  >
+      <app-movie-card [movie]="movie"></app-movie-card>
+    </div>
+  </div>
+-->
 
 <div *ngIf="!isLoading">
   <div *ngIf="movieData" class="film-list">
