--- a/src/app/components/shared/loading/loading.component.html
+++ b/src/app/components/shared/loading/loading.component.html
@@ -1,2 +1,3 @@
-<!-- not a request but from a user perspective I would like to see more than just a text for loading -->
-<div> loading ...</div>
+<div class="loader-container">
+  <span class="loader"></span>
+</div>
