--- a/src/app/components/shared/movie-details/movie-details.component.html
+++ b/src/app/components/shared/movie-details/movie-details.component.html
@@ -4,7 +4,10 @@
   <h2>{{ movie.title }}</h2>
   <div class="movie-details">
     <div class="movie-poster">
-      <img src="https://image.tmdb.org/t/p/w500/{{ movie.poster_path }}" alt="{{ movie.title }} Poster">
+      <img
+        src="https://image.tmdb.org/t/p/w500/{{ movie.poster_path }}"
+        alt="{{ movie.title }} Poster"
+      />
     </div>
     <div class="movie-info">
       <p><strong>Release Date:</strong> {{ movie.release_date }}</p>
